forms-flow-idm/infra/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sofmun-keycloak
  namespace : forms-flow-idm
  labels:
    app.kubernetes.io/name: sofmunkeycloak
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sofmunkeycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sofmunkeycloak
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: sofmunkeycloak
          image: sofiamunicipalitydigitall/forms-flow-idm:latest
  #        lifecycle:
  #          postStart:
  #            exec:
  #              command: ["/bin/sh", "-c",  "while true; do sleep 3600; done;" ]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
