forms-flow-idm/infra/dev/service_dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: forms-flow-idm-svc
  namespace: forms-flow-idm
  labels:
    app.kubernetes.io/name: sofmunkeycloak
spec:
  selector:
    app.kubernetes.io/name: sofmunkeycloak
  ports:
    - name: forms-flow-idm-svc
      protocol: TCP
      port: 80
      targetPort: 8080
