forms-flow-idm/infra/dev/ingress_dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forms-flow-idm-nginx
  namespace: forms-flow-idm
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "digital-idm.digitalsofia.digital"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: forms-flow-idm-svc
            port:
              number: 80
